--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div>
         <h2>Together we <span style="color:#ed1c24">CAN</span> make school a better place</h2>
     </div>
-    <img class="can-logo-and-name" src="can-logo-and-name.PNG" alt="logo">
+    <img class="can-logo-and-name" src="can-logo-and-name.png" alt="logo">
     <br>
     <img src="" alt="Promo Video">
     </main>
