--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 </head>
 <body>
     <div class="header">
-        <img class="CanMiniLogo" src="can-mini-logo.PNG" alt="can logo">
-        <h1 class="headerHeading"><span style="color:#ed1c24;">CAN</span> Political Party</h1></span>
+        <h1 class="headerHeading"><span style="color:#ac0700;">CAN</span> Political Party</h1></span>
     </div>
     <main>
     <header>
@@ -30,7 +29,7 @@
         <br>
     </header>
     <div>
-        <h2>Together we <span style="color:#ed1c24">CAN</span> make school a better place</h2>
+        <h2>Together we <span style="color:#ac0700">CAN</span> do it!</h2>
     </div>
     <img class="can-logo-and-name" src="can-logo-and-name.png" alt="logo">
     <br>
