--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <img class="can-logo-and-name" src="can-logo-and-name.png" alt="logo">
     <br>
-    <img src="" alt="Promo Video">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/8EqxxJhvlkQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
 </body>
 </html>
