Adding our goals

--- a/ourgoal.html
+++ b/ourgoal.html
@@ -25,7 +25,11 @@
         </nav>
     </header>
     <h2>Our Goals</h2>
-    <h3></h3>
+    <h3>Replacing notebooks with tablets</h3>
+    <br>
+    <h3>Student study rooms</h3>    
+    <br>
+    <h3>Changing the no phones rule</h3>
     </main>
 </body>
 </html>
