--- a/ourteam.html
+++ b/ourteam.html
@@ -28,13 +28,13 @@
     </main>
     <div class="EveryoneLineOne">
         <div class="WholePerson">
-            <img src="" alt="foto">
+            <img src="css/images/Samuel.jpg" alt="foto">
             <h2>Samuel Kopún</h2>
             <h3>Main candidate for school president</h3>
         </div>
 
         <div class="WholePerson">
-            <img src="" alt="foto">
+            <img src="css/images/Anicka.jpg" alt="foto">
             <div class="Info">
                 <h2>Anna Cabrnochová</h2>
                 <h3>Poster designer</h3>
@@ -52,7 +52,7 @@
 <br>
     <div class="EveryoneLineTwo">
         <div class="WholePerson">
-            <img src="" alt="foto">
+            <img src="css/images/Julie.jpg" alt="foto">
             <div class="Info">
                 <h2>Jůlie Vřeštálová</h2>
                 <h3>Social media manager</h3>
@@ -60,7 +60,7 @@
         </div>
 
         <div class="WholePerson">
-            <img src="" alt="foto">
+            <img src="css/images/Oliver.jpg" alt="foto">
             <h2>Oliver Engel</h2>
             <h3>Social media manager</h3>
         </div>
